[package]
name = "bound-vec-helper"
version = "1.0.2"
edition = "2024"

[dependencies]
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v1.6.0" }
frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v1.6.0" }

[features]
default = ['std']
std = [
    'frame-support/std',
    'sp-std/std',
]